--- a/index.html
+++ b/index.html
@@ -33,28 +33,18 @@
   </section>
 
   <!-- Formulario de contacto -->
-  <section id="contacto" class="py-16 bg-white px-6 md:px-16">
-    <div class="max-w-xl mx-auto">
-      <h2 class="text-3xl font-bold mb-6 text-center">Contáctanos</h2>
-      <form action="mailto:ariadnaguerramar@hotmail.com" method="POST" enctype="text/plain" class="space-y-4">
-        <div>
-          <label for="nombre" class="block font-medium">Nombre</label>
-          <input type="text" id="nombre" name="nombre" required class="w-full border border-gray-300 rounded-lg px-4 py-2">
-        </div>
-        <div>
-          <label for="email" class="block font-medium">Correo electrónico</label>
-          <input type="email" id="email" name="email" required class="w-full border border-gray-300 rounded-lg px-4 py-2">
-        </div>
-        <div>
-          <label for="mensaje" class="block font-medium">Mensaje</label>
-          <textarea id="mensaje" name="mensaje" rows="5" required class="w-full border border-gray-300 rounded-lg px-4 py-2"></textarea>
-        </div>
-        <div class="text-center">
-          <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg">Enviar</button>
-        </div>
-      </form>
-    </div>
-  </section>
+<section id="contacto" class="py-16 bg-white px-6 md:px-16">
+  <div class="max-w-xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-6">Contáctanos</h2>
+    <p class="text-lg text-gray-700 mb-4">Si deseas más información sobre MatchClass, puedes escribirnos o llamarnos directamente:</p>
+    <p class="text-xl text-blue-600 font-semibold mb-2">
+      <a href="mailto:ariadnaguerramar@hotmail.com" class="hover:underline">ariadnaguerramar@hotmail.com</a>
+    </p>
+    <p class="text-xl text-blue-600 font-semibold">
+      <a href="tel:+34600111222" class="hover:underline">+34 600 111 222</a>
+    </p>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-6">
