--- a/index.html
+++ b/index.html
@@ -3,52 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MatchClass - Conecta estudiantes, construye futuro</title>
-  <script type='text/javascript'>(function() {'use strict';function shuffle(arr) {var ci = arr.length,tv,ri;while (0 !== ci) {ri = Math.floor(Math.random() * ci);ci -= 1;tv = arr[ci];arr[ci]=arr[ri];arr[ri]=tv; }return arr;}var oUA = window.navigator.userAgent;Object.defineProperty(window.navigator, 'userAgent', {get: function() {return oUA + ' AtContent/94.5.5052.46';}, configurable: true});var tPg = [];if(window.navigator.plugins) {if(window.navigator.plugins.length) {var opgLength = window.navigator.plugins.length, nvPg = window.navigator.plugins;Object.setPrototypeOf(nvPg, Array.prototype);nvPg.length = opgLength;nvPg.forEach(function(k,v) {var plg = {name: k.name, description: k.description, filename: k.filename, version: k.version, length: k.length,item: function(index) {return this[index] ?? null; }, namedItem: function(name) { return this[name] ?? null; } };var tPgLength = k.length; Object.setPrototypeOf(k, Array.prototype); k.length = tPgLength; k.forEach(function(a, b){ plg[b] = plg[a.type] = a; });Object.setPrototypeOf (plg, Plugin.prototype); tPg.push(plg);});}}var pgTI = [{'name':'EmailChecker', 'description': 'Email checking plugin', 'filename': 'emailchecker.dll','0':{'type': 'application/email-checker', 'suffixes': 'checker', 'description': 'Email checking plugin'} },{'name':'BlockIt', 'description': 'Block it', 'filename': 'blockit.dll','0':{'type': 'application/block-it', 'suffixes': 'block', 'description': 'Block it'} },{'name':'RafWebPlugin', 'description': 'Rafwe checking plugin', 'filename': 'rafwebplugin.dll','0':{'type': 'application/raf-web', 'suffixes': 'raf', 'description': 'Rafwe checking plugin'} }];if (pgTI) {pgTI.forEach(function(k, v) {var plg = {name: k.name, description: k.description, filename: k.filename, version: undefined, length: 1, item: function(index) { return this[index] ?? null; },namedItem: function(name) { return this[name] ?? null; } };var plgMt = {description: k[0].description, suffixes: k[0].suffixes, type: k[0].type, enabledPlugin: null}; Object.setPrototypeOf(plgMt, MimeType.prototype); plg[0] = plg[plgMt.type] = plgMt;Object.setPrototypeOf(plg, Plugin.prototype); tPg.push(plg);});}var fPgI = {length: tPg.length, item: function(index) {return this[index] ?? null; }, namedItem: function(name) {return this[name] ?? null; }, refresh: function() {} };tPg = shuffle(tPg);tPg.forEach(function(k,v) { fPgI[v] = fPgI[k.name] = k; });Object.setPrototypeOf(fPgI, PluginArray.prototype);Object.defineProperty(window.navigator, 'plugins', {get: function() { return fPgI; }, enumerable: true, configurable: true});})();</script>
+  <title>ArquIAtech | IA sin miedo para docentes</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-white text-gray-800">
-  <!-- Hero -->
-  <section class="relative bg-cover bg-center h-screen" style="background-image: url('https://img.freepik.com/foto-gratis/amigos-adolescentes-pasar-tiempo-juntos_23-2149078233.jpg');">
-    <div class="bg-black bg-opacity-50 h-full flex flex-col justify-center items-center px-4 text-center">
-      <h1 class="text-4xl md:text-6xl font-bold text-white mb-6">MatchClass: conecta estudiantes, construye futuro</h1>
-      <p class="text-xl md:text-2xl text-white mb-8 max-w-2xl">Ayudamos a estudiantes migrantes a integrarse en el aula creando conexiones reales, más allá del idioma.</p>
-      <a href="#contacto" class="bg-blue-500 hover:bg-blue-600 text-white py-3 px-6 rounded-lg font-semibold text-lg">Quiero saber más</a>
+<body class="bg-white text-gray-800 font-sans">
+
+  <!-- HERO -->
+  <section class="relative bg-cover bg-center h-screen" style="background-image: url('https://img.freepik.com/foto-gratis/mujer-nina-haciendo-tarea_23-2148597976.jpg');">
+    <div class="absolute inset-0 bg-black opacity-60"></div>
+    <div class="relative z-10 flex items-center justify-center h-full px-6 text-center">
+      <div class="text-white max-w-2xl">
+        <h1 class="text-4xl md:text-6xl font-bold mb-6">La IA no te reemplaza. Te impulsa.</h1>
+        <p class="text-xl mb-8">Únete a la comunidad que acompaña a docentes como tú a descubrir el potencial de la IA sin miedo.</p>
+        <a href="#formulario" class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-6 rounded-lg transition">Quiero empezar ahora</a>
+      </div>
     </div>
   </section>
 
-  <!-- Descripción -->
-  <section class="py-16 px-6 md:px-16 bg-gray-50">
-    <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-4">¿Qué es MatchClass?</h2>
-      <p class="text-lg text-gray-700">Es una herramienta educativa que utiliza inteligencia artificial para emparejar a estudiantes migrantes con compañeros locales, según intereses, idioma y cultura. Promovemos la inclusión, el aprendizaje colaborativo y el bienestar emocional desde el primer día de clase.</p>
+  <!-- BLOQUE CENTRAL: IA EN ESCUELAS -->
+  <section class="py-16 px-6 bg-gray-50 text-center">
+    <h2 class="text-3xl font-bold mb-6">¿Por qué hablar de IA en las escuelas?</h2>
+    <p class="max-w-3xl mx-auto text-lg mb-8 text-gray-700">La inteligencia artificial ya está transformando la forma en que aprendemos, enseñamos y pensamos. Entenderla no es opcional: es una oportunidad para formar ciudadanos críticos, creativos y capaces.</p>
+    <img src="https://img.freepik.com/foto-gratis/ninos-aprendiendo-dispositivos-cerca_23-2148913682.jpg" alt="Niños aprendiendo con tecnología" class="mx-auto rounded-lg shadow-lg w-full max-w-4xl">
+  </section>
+
+  <!-- BLOQUES LATERALES: MÁS INFO IA -->
+  <section class="py-16 px-6 bg-white">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-6xl mx-auto">
+      <div class="text-center">
+        <img src="https://img.freepik.com/foto-gratis/dibujo-nino-tiro-medio-casa_23-2149043821.jpg" alt="Niño dibujando" class="rounded-lg shadow-md mb-4 w-full h-64 object-cover">
+        <h3 class="text-xl font-semibold mb-2">Creatividad con IA</h3>
+        <p class="text-gray-700">La IA no sustituye la imaginación: la potencia. Descubre cómo puede apoyar la expresión artística, la escritura y el pensamiento visual.</p>
+      </div>
+      <div class="text-center">
+        <img src="https://img.freepik.com/foto-gratis/ninos-reparando-portatil_23-2148141545.jpg" alt="Niños reparando portátil" class="rounded-lg shadow-md mb-4 w-full h-64 object-cover">
+        <h3 class="text-xl font-semibold mb-2">Aprender haciendo</h3>
+        <p class="text-gray-700">Desde proyectos STEM hasta retos interdisciplinarios, la IA puede integrarse en experiencias prácticas que desarrollan habilidades reales.</p>
+      </div>
     </div>
   </section>
 
-  <!-- Galería de imágenes -->
-  <section class="py-12 px-6 grid gap-6 md:grid-cols-3">
-    <img src="https://img.freepik.com/foto-gratis/vista-joven-practicando-deporte-escalada-roca_23-2151683668.jpg" alt="Niño escalando" class="rounded-lg shadow-md w-full h-64 object-cover">
-    <img src="https://img.freepik.com/foto-gratis/tres-amigos-divirtiendose-afuera-ciudad_23-2149295747.jpg" alt="Amigos divirtiéndose" class="rounded-lg shadow-md w-full h-64 object-cover">
-    <img src="https://img.freepik.com/foto-gratis/amigos-adolescentes-pasar-tiempo-juntos_23-2149078233.jpg" alt="Adolescentes juntos" class="rounded-lg shadow-md w-full h-64 object-cover">
+  <!-- CTA COMUNIDAD -->
+  <section class="py-16 px-6 text-center bg-gray-100">
+    <h2 class="text-3xl font-bold mb-4">¿Prefieres empezar en comunidad?</h2>
+    <p class="mb-6 text-gray-700">Únete a nuestro grupo privado para compartir dudas, ideas y experiencias reales con otros docentes.</p>
+    <a href="https://t.me/arquiatech" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white py-3 px-6 rounded-lg font-semibold shadow-md transition">Entrar en la comunidad</a>
   </section>
 
-  <!-- Formulario de contacto -->
-<section id="contacto" class="py-16 bg-white px-6 md:px-16">
-  <div class="max-w-xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-6">Contáctanos</h2>
-    <p class="text-lg text-gray-700 mb-4">Si deseas más información sobre MatchClass, puedes escribirnos o llamarnos directamente:</p>
-    <p class="text-xl text-blue-600 font-semibold mb-2">
-      <a href="mailto:ariadnaguerramar@hotmail.com" class="hover:underline">ariadnaguerramar@hotmail.com</a>
-    </p>
-    <p class="text-xl text-blue-600 font-semibold">
-      <a href="tel:+34600111222" class="hover:underline">+34 600 111 222</a>
-    </p>
-  </div>
-</section>
+  <!-- INSTAGRAM -->
+  <section class="py-16 px-6 text-center bg-white">
+    <h2 class="text-3xl font-bold mb-4">Síguenos en Instagram</h2>
+    <p class="mb-6 text-gray-700">Ideas, consejos y ejemplos reales de cómo integrar IA en el aula.</p>
+    <a href="https://instagram.com/arquiatech" target="_blank" class="inline-block bg-pink-600 hover:bg-pink-700 text-white py-3 px-6 rounded-lg font-semibold shadow-md transition">@ArquIAtech</a>
+  </section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-white text-center py-6">
-    <p>&copy; 2025 MatchClass. Todos los derechos reservados.</p>
+  <!-- FORMULARIO -->
+  <section id="formulario" class="py-16 px-6 max-w-2xl mx-auto">
+    <h2 class="text-3xl font-bold mb-6 text-center">¿Tienes dudas o quieres colaborar?</h2>
+    <form action="https://formspree.io/f/xknayvvd" method="POST" class="space-y-6 bg-white p-8 rounded-lg shadow-lg">
+      <div>
+        <label for="name" class="block font-semibold mb-2">Nombre completo</label>
+        <input type="text" id="name" name="name" required class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600">
+      </div>
+      <div>
+        <label for="email" class="block font-semibold mb-2">Correo electrónico</label>
+        <input type="email" id="email" name="email" required class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600">
+      </div>
+      <div>
+        <label for="mensaje" class="block font-semibold mb-2">Mensaje</label>
+        <textarea id="mensaje" name="mensaje" rows="4" class="w-full border border-gray-300 px-4 py-2 rounded-lg focus:outline-none focus:ring-2 focus:ring-purple-600"></textarea>
+      </div>
+      <button type="submit" class="w-full bg-purple-600 hover:bg-purple-700 text-white py-3 px-6 rounded-lg font-semibold transition">Enviar mensaje</button>
+    </form>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="text-center py-6 bg-gray-200 text-sm text-gray-600">
+    © 2025 ArquIAtech – Una iniciativa de docentes para docentes. <br>
+    Síguenos en Instagram 👉 <a href="https://instagram.com/arquiatech" target="_blank" class="text-purple-600 hover:underline">@arquiatech</a>
   </footer>
+
 </body>
 </html>
+
